Finalize project structure setup and instructions

--- a/Playground.ipynb
+++ b/Playground.ipynb
@@ -11,9 +11,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76629921-677e-40b5-becd-9c9830f8eef0",
+   "metadata": {},
+   "source": [
+    "### Directory structure\n",
+    "Project should have the following structure:\n",
+    "> ```python  \n",
+    "> new_project  \n",
+    "> ├── antigravity  \n",
+    "> │   ├── __init__.py         # make it a package  \n",
+    "> │   └── antigravity.py  \n",
+    "> └── test  \n",
+    ">     ├── __init__.py         # also make test a package  \n",
+    ">     └── test_antigravity.py  \n",
+    "> ```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1577ab68-d8a7-4669-942b-88af74b072c9",
+   "id": "00eaa5e8-c159-4136-88cb-651b78f672b6",
    "metadata": {},
    "outputs": [],
    "source": []
