final push old laptop

--- a/booking_system/main_notebook.ipynb
+++ b/booking_system/main_notebook.ipynb
@@ -93,10 +93,7 @@
     "room_data.loc['Room_1':'Room_9', 'view_type'] = 'garden'\n",
     "room_data.loc['Room_10':'Room_18', 'view_type'] = 'city'\n",
     "room_data.loc[:, 'child_cot_cost'] = 20\n",
-    "\n",
-    "# Set different costs for garden and city views\n",
-    "room_data.loc[room_data['view_type'] == 'garden', 'base_cost'] = 100\n",
-    "room_data.loc[room_data['view_type'] == 'city', 'base_cost'] = 80"
+    "room_data.loc[:, 'base_cost'] = 100"
    ]
   },
   {
@@ -289,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "id": "c71f2a41-f845-4a5b-8114-e10250c982f1",
    "metadata": {},
    "outputs": [],
@@ -309,8 +306,7 @@
     "    'num_rooms_booked',\n",
     "    'rooms_booked', # list of room_names\n",
     "    'promo_code_flag',\n",
-    "    'total_price',\n",
-    "    'staff_notes'\n",
+    "    'total_price'\n",
     "    ]\n",
     "\n",
     "# Determine total number of reservations using cust_data\n",
@@ -334,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "id": "ce943095-53d4-4c7c-99ab-c9c39bb2c5f5",
    "metadata": {},
    "outputs": [],
@@ -442,265 +438,87 @@
     "reservation_data.loc[:, 'promo_code_flag'] = 'N'\n",
     "reservation_data.loc[reservation_data.index % 10 == 0, 'promo_code_flag'] = 'Y'\n",
     "\n",
-    "# Calculate total prices based on rooms reserved and nights stayed\n",
+    "# Calculate total prices based on number of rooms and children\n",
+    "# Assume promo codes are worth a 10% discount\n",
+    "reservation_data.loc[:, 'total_price'] = (\n",
+    "    reservation_data['num_rooms_booked'] * 100).add(\n",
+    "    reservation_data['num_children'] * 20)\n",
+    "reservation_data.loc[reservation_data['promo_code_flag'] == 'Y', 'total_price'] *= 0.9\n",
     "\n",
-    "\n",
-    "# Remove double-bookings in sample data"
+    "# Remove double-bookings in sample data\n",
+    "# Not enough time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4b563b27-e655-4442-a35c-2d4fc75e194b",
+   "execution_count": 75,
+   "id": "94069a7a-1a0b-48e5-9e70-c6c2a3a318a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>staff_member_initials</th>\n",
-       "      <th>customer_name</th>\n",
-       "      <th>arrival_date</th>\n",
-       "      <th>departure_date</th>\n",
-       "      <th>booking_length</th>\n",
-       "      <th>reservation_status</th>\n",
-       "      <th>repeat_customer_flag</th>\n",
-       "      <th>num_adults</th>\n",
-       "      <th>num_children</th>\n",
-       "      <th>num_infants</th>\n",
-       "      <th>num_rooms_booked</th>\n",
-       "      <th>rooms_booked</th>\n",
-       "      <th>promo_code_flag</th>\n",
-       "      <th>total_price</th>\n",
-       "      <th>staff_notes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>VP</td>\n",
-       "      <td>Dolores Flanagan</td>\n",
-       "      <td>2022-10-29</td>\n",
-       "      <td>2022-11-02</td>\n",
-       "      <td>4</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Room_3]</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MT</td>\n",
-       "      <td>Jeffrey Jackson</td>\n",
-       "      <td>2022-12-12</td>\n",
-       "      <td>2022-12-17</td>\n",
-       "      <td>5</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>N</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[Room_15, Room_12]</td>\n",
-       "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MT</td>\n",
-       "      <td>Holly Bearden</td>\n",
-       "      <td>2022-11-06</td>\n",
-       "      <td>2022-11-10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Room_13]</td>\n",
-       "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>VP</td>\n",
-       "      <td>Cathleen Bailey</td>\n",
-       "      <td>2023-04-04</td>\n",
-       "      <td>2023-04-09</td>\n",
-       "      <td>5</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Room_13]</td>\n",
-       "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>BR</td>\n",
-       "      <td>Michael Wilson</td>\n",
-       "      <td>2023-05-06</td>\n",
-       "      <td>2023-05-11</td>\n",
-       "      <td>5</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Room_5]</td>\n",
-       "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  staff_member_initials     customer_name arrival_date departure_date  \\\n",
-       "0                    VP  Dolores Flanagan   2022-10-29     2022-11-02   \n",
-       "1                    MT   Jeffrey Jackson   2022-12-12     2022-12-17   \n",
-       "2                    MT     Holly Bearden   2022-11-06     2022-11-10   \n",
-       "3                    VP   Cathleen Bailey   2023-04-04     2023-04-09   \n",
-       "4                    BR    Michael Wilson   2023-05-06     2023-05-11   \n",
-       "\n",
-       "  booking_length reservation_status repeat_customer_flag num_adults  \\\n",
-       "0              4          completed                    Y          1   \n",
-       "1              5          completed                    N          4   \n",
-       "2              4          completed                    Y          2   \n",
-       "3              5          completed                    Y          2   \n",
-       "4              5          completed                    Y          1   \n",
-       "\n",
-       "  num_children num_infants num_rooms_booked        rooms_booked  \\\n",
-       "0            1           0                1            [Room_3]   \n",
-       "1            0           1                2  [Room_15, Room_12]   \n",
-       "2            1           0                1           [Room_13]   \n",
-       "3            2           0                1           [Room_13]   \n",
-       "4            0           1                1            [Room_5]   \n",
-       "\n",
-       "  promo_code_flag total_price staff_notes  \n",
-       "0               Y         NaN         NaN  \n",
-       "1               N         NaN         NaN  \n",
-       "2               N         NaN         NaN  \n",
-       "3               N         NaN         NaN  \n",
-       "4               N         NaN         NaN  "
+       "Index(['staff_member_initials', 'customer_name', 'arrival_date',\n",
+       "       'departure_date', 'booking_length', 'reservation_status',\n",
+       "       'repeat_customer_flag', 'num_adults', 'num_children', 'num_infants',\n",
+       "       'num_rooms_booked', 'rooms_booked', 'promo_code_flag', 'total_price'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reservation_data.head()"
+    "reservation_data.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fc26b03-5f5b-4ce8-8f45-e53cf2599943",
+   "id": "80371846-d584-4629-b446-0038285e3521",
    "metadata": {},
    "outputs": [],
    "source": [
-    "booking_lengths[0].days"
+    "reservation_data.sort_values(by=['arrival_date'], inplace=True)\n",
+    "'-'.join(\n",
+    "    reservation_data['staff_member_initials'],\n",
+    "    reservation_data['arrival_date'].astype(str),\n",
+    "    reservation_data['departure_date'].astype(str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c3ee7b5-2531-420c-8b36-1ab17a00d491",
+   "execution_count": 77,
+   "id": "67f586dc-ebd3-474c-b4e1-003d109c6920",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      2023-09-02\n",
+       "1      2022-11-15\n",
+       "2      2023-06-08\n",
+       "3      2022-11-07\n",
+       "4      2023-06-29\n",
+       "          ...    \n",
+       "729    2023-06-14\n",
+       "730    2023-06-21\n",
+       "731    2023-01-15\n",
+       "732    2023-08-21\n",
+       "733    2022-11-21\n",
+       "Name: arrival_date, Length: 734, dtype: object"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "[x.days for x in booking_lengths]"
+    "reservation_data['arrival_date'].astype(str)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95b1d327-89ab-443c-94c0-91deffe91a8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reservation_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d95842f-bed8-43d3-9d45-835dbd93298b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "room_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb69800d-ab19-45d6-b627-96371e8d1e43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90b02222-53b9-42ea-8908-8c73f07ae37e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reservation_data.loc[:,['arrival_date','num_rooms_booked']].groupby('arrival_date').sum()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd0ac2e1-997c-4e85-a332-f240e29f33b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reservation_data.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94069a7a-1a0b-48e5-9e70-c6c2a3a318a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
